cmake_minimum_required(VERSION 3.23)
project(ProyectoEstructuraDatos)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProyectoEstructuraDatos main.cpp Dado.cpp Dado.h LinkedList.cpp LinkedList.h Monster.cpp Monster.h Node.cpp Node.h Player.cpp Player.h Skill.cpp Skill.h Map.cpp Map.h Dugeon.cpp Dugeon.h Game.cpp Game.h Spell.cpp Spell.h)
